--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
   </header>
   <main>
     <article>
-      <h2>The Rolex Submariner</h2>
-      <p>One of the most iconic dive watches ever made.</p>
-    </article>
-    <article>
-      <h2>Omega Speedmaster</h2>
-      <p>The only watch to be worn on the moon.</p>
+      <main>
+  <h2>Latest Posts</h2>
+  <ul>
+    <li><a href="posts/restoring-vintage-seikos.html">Restoring Vintage Seikos</a></li>
+  </ul>
+</main>
+
     </article>
   </main>
   <footer>
