--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h2>Restoring Vintage Seikos</h2>
       <p>My tips on how to find a vintage Seiko and get it restored to fresh condition!</p>
       <a href="restoring-vintage-seikos.html">
-        <img src="images/vintage-seiko.jpg" alt="Vintage Seiko Watch">
+        <img src="images/collage.png" alt="Vintage Seiko Watch">
       </a>
     </section>
     <section>
