--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Watchbox - Vintage Watches Blog</title>
+  <title>Watchbox - Vintage Horlogeblog</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Watchbox</h1>
-    <p>A place to dive into vintage watches and restoration guides</p>
+    <div class="container">
+      <h1>Watchbox</h1>
+      <p>A place to dive into vintage watches and restoration guides</p>
+    </div>
   </header>
   <main>
-    <section>
-      <h2>Restoring Vintage Seikos</h2>
-      <p>My tips on how to find a vintage Seiko and get it restored to fresh condition!</p>
-      <a href="restoring-vintage-seikos.html">
-        <img src="images/collage.png" alt="Vintage Seiko Watch">
-      </a>
-    </section>
-    <section>
-      <h2>How I Restored a Vintage Seiko</h2>
-      <p>Step-by-step restoration process of a classic Seiko to bring it back to life!</p>
-      <a href="how-i-restored-a-vintage-seiko.html">
-        <img src="images/restored-seiko.jpg" alt="Restored Seiko Watch">
-      </a>
-    </section>
+    <div class="container">
+      <section class="intro">
+        <h2>Welkom bij Watchbox</h2>
+        <p>Ontdek de wereld van vintage horloges en leer hoe je ze kunt restaureren naar hun oorspronkelijke pracht.</p>
+      </section>
+      <section class="featured-post">
+        <h2>Restauratie van Vintage Seiko's</h2>
+        <p>Mijn tips over hoe je een vintage Seiko kunt vinden en restaureren naar een frisse staat!</p>
+        <a href="restoring-vintage-seikos.html">
+          <img src="images/collage.png" alt="Vintage Seiko Watch">
+        </a>
+      </section>
+    </div>
   </main>
   <footer>
-    <p>&copy; 2024 Watchbox. All rights reserved.</p>
+    <div class="container">
+      <p>&copy; 2024 Watchbox. Alle rechten voorbehouden.</p>
+    </div>
   </footer>
 </body>
 </html>
